--- a/html/idiomaInglesOscuro.html
+++ b/html/idiomaInglesOscuro.html
@@ -105,10 +105,9 @@
                 <img src="../img/avatar.svg">
             </div>
             <div class="col-md-6 col-xs-12 rounded bg-white shadow-dark infoSobreMi">
-                <div class="col-md-6 col-xs-12 ">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic veritatis unde a odio molestiae, illo
-                        sint quos asperiores quidem dolores rem facilis debitis saepe deleniti.</p>
-                    <a class="hidden-xs hidden-sm" href="../PalomaresManel_CV.pdf"><button class="btnCV">Download the resume</button></a>
+                <div class="col-md-6 col-xs-12 divTextoSobreMi">
+                    <p>Hello! I'm Manel Palomares, currently a <span>Web Application Development</span> student at the Jaume Viladoms center and <span>Software Programmer</span> at the 4i company in Sabadell</p>
+                    <a class="hidden-xs hidden-sm" href="../PalomaresManel_CV.pdf"><button class="btnCV">Descarga el CV</button></a>
                 </div>
                 <div class="col-md-6 col-xs-12">
                     <div class="skill-item">
