--- a/index.html
+++ b/index.html
@@ -105,10 +105,9 @@
                 <img src="img/avatar.svg">
             </div>
             <div class="col-md-6 col-xs-12 rounded bg-white shadow-dark infoSobreMi">
-                <div class="col-md-6 col-xs-12 ">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic veritatis unde a odio molestiae, illo
-                        sint quos asperiores quidem dolores rem facilis debitis saepe deleniti.</p>
-                    <a class="hidden-xs hidden-sm" href="PalomaresManel_CV.pdf"><button class="btnCV">Descarrega el CV</button></a>
+                <div class="col-md-6 col-xs-12 divTextoSobreMi">
+                    <p>¡Hola! Soy Manel Palomares, actualmente estudiante de <span>Desarrollo de Aplicaciones Web</span> en el centro Jaume Viladoms y <span>Programador de Software</span> en la empresa 4i de Sabadell</p>
+                    <a class="hidden-xs hidden-sm" href="PalomaresManel_CV.pdf"><button class="btnCV">Descarga el CV</button></a>
                 </div>
                 <div class="col-md-6 col-xs-12">
                     <div class="skill-item">
@@ -154,7 +153,7 @@
                         <span class='bx bxs-graduation iconoExperiencia'></span>
                         <div class="timeline-container wow fadeInUp">
                             <div class="content">
-                                <span class="time">2020 - Actualment</span>
+                                <span class="time">2020 - Actualmente</span>
                                 <h3>CFGS DAW</h3>
                                 <p>Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
                             </div>
@@ -176,7 +175,7 @@
                         <span class='bx bxs-briefcase iconoExperiencia'></span>
                         <div class="timeline-container wow fadeInUp">
                             <div class="content">
-                                <span class="time">2021 - Actualment</span>
+                                <span class="time">2021 - Actualmente</span>
                                 <h3>Desarrollador Web</h3>
                                 <p>Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
                             </div>
