--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-xs-12 hidden-lg hidden-md">
-                    <a href="PalomaresManel_CV.pdf"><button class="btnCV">Descarrega el CV</button></a>
+                    <a href="PalomaresManel_CV.pdf"><button class="btnCV">Descarga el CV</button></a>
                 </div>
             </div>
         </div>
