--- a/html/modoClaro.html
+++ b/html/modoClaro.html
@@ -19,7 +19,7 @@
         <nav class="navStyle navbar navbar-fixed-top navbar-inverse">
             <div class="container contenedorNav">
                 <div class="navbar-header">
-                    <button id="btnMenuResponsive" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false" onclick="comprovarBoton();">
+                    <button id="btnMenuResponsive" type="button" class="navbar-toggle collapsed botonMenu" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false" onclick="comprovarBoton();">
                     <span class="sr-only">Navegació</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-xs-12 hidden-lg hidden-md">
-                    <a href="../PalomaresManel_CV.pdf"><button class="btnCV">Descarrega el CV</button></a>
+                    <a href="../PalomaresManel_CV.pdf"><button class="btnCV">Descarga el CV</button></a>
                 </div>
             </div>
         </div>
