--- a/html/modoClaro.html
+++ b/html/modoClaro.html
@@ -214,7 +214,7 @@
                 <h5>Lista de la compra</h5>
             </div>
             <div class="col-md-6 imgProyectos">
-                <a href="../proyectos/PalomaresManel_UF3_M06_ACT07/index.html"><img src="../img/Proyecto1.PNG" class="imgProyecto"></a>
+                <a href="../proyectos/Proyecto01/index.html"><img src="img/Proyecto1.PNG" class="imgProyecto"></a>
             </div>
             <div class="col-md-6 contenedorInfo">
                 <h5 class="hidden-xs hidden-sm">Llista de la compra</h5>
